# MedCore_APP

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
app/: main.py
app/calculadoras/: abdomen.py  cardio.py  electrolitos.py  general.py  ginecologia.py  infectologia.py  mate.py  renal.py  reumatologia.py
app/formularioshc/: gene.py  ped.py
app/laboratorios/: gineco.py  hemograma.py  lcr.py  uroanalisis.py
app/modules/: anthro.py  cal.py  colors.py  guias.py  hc.py  home.py  info.py  labs.py  nav.py
app/storage/data/: meds.json
app/storage/data/algoritmos/: algoritmos.json
app/storage/data/guias/: blabla.md  cardio copy 6.md  cardiologia.md  infectologia.md  neurologia.md  testpearl.md
app/storage/data/historias/: historias.json
app/storage/data/imgdx/: imgdx.json
app/storage/data/meds/: meds.json
app/storage/data/notas/: ll.md  sidrome_de_klinefelter.md
app/storage/data/zscores/: peso-talla.json
backend/: index.py
backend/guias/: test asd.md
ideas_no_implementadas/: algoritmos.py  hc1.py  info.py
ideas_no_implementadas/algoritmos/: algoritmos.json
ideas_no_implementadas/backend/: app.py
ideas_no_implementadas/backend/static/: index.html
ideas_no_implementadas/zscores/: peso-edad.json
